--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
   <!-- 引入Font Awesome图标库 -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="stylesheet" href="./css/styles.css">
+  <script>
+    // 立即读取主题状态（避免页面加载时的闪烁）
+    (function() {
+      const isDarkMode = localStorage.getItem('darkMode') === 'true';
+      if (isDarkMode) {
+        document.documentElement.classList.add('dark-mode');
+      }
+    })();
+  </script>
 </head>
 <body>
   <nav>
@@ -92,7 +101,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 ZCETHAN. 版权所有。</p>
+    <p>&copy; 2025 ZCETHAN. 本文档采用<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">CC BY-NC-SA 4.0</a>协议</p>
   </footer>
 
   <button id="theme-toggle" onclick="toggleTheme()">切换为深色模式</button>
